src/objects/Sale_Farmer_Associations__c.object
<CustomObject>
    <fields>
        <fullName>Beans_Moisture_Content__c</fullName>
        <label>Beans Moisture Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beans_Number_of_90kg_Bags__c</fullName>
        <label>Beans Number of 90kg Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Moisture_Content__c</fullName>
        <label>Cow Peas Moisture Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Number_of_90kg_Bags__c</fullName>
        <label>Cow Peas Number of 90kg Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dolichos_Moisture_Content__c</fullName>
        <label>Dolichos Moisture Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dolichos_Number_of_90kg_Bags__c</fullName>
        <label>Dolichos Number of 90kg Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Farmer__c</fullName>
        <label>Ewarehouse Farmer</label>
        <referenceTo>Ewarehouse_Farmer__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Bank Reference</label>
        <referenceTo>Ewarehouse_Sale_Bank_Reference__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Beans_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Beans Association</label>
        <referenceTo>Ewarehouse_Sale_Beans_Association__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Black_Beans_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Black Beans Association</label>
        <referenceTo>Ewarehouse_Sale_Black__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Cow_Peas_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Cow Peas Association</label>
        <referenceTo>Ewarehouse_Sale_Cow_Peas_Association__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Green_Grams_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Green Grams Association</label>
        <referenceTo>Ewarehouse_Sale_Green_Grams_Association__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Maize_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Maize Association</label>
        <referenceTo>Ewarehouse_Sale_Maize_Association__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale_Pigeon_Peas_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Sale Pigeon Peas Association</label>
        <referenceTo>Ewarehouse_Sale_Pigeon_Peas_Association__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Sale__c</fullName>
        <label>Ewarehouse Sale</label>
        <referenceTo>Sale_Record__c</referenceTo>
        <relationshipLabel>Ewarehouse Sale Farmer Associations</relationshipLabel>
        <relationshipName>Ewarehouse_Sale_Farmer_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Moisture_Content__c</fullName>
        <label>Green Grams Moisture Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Number_of_90kg_Bags__c</fullName>
        <label>Green Grams Number of 90kg Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maize_Moisture_Content__c</fullName>
        <label>Maize Moisture Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maize_Number_of_90kg_Bags__c</fullName>
        <label>Maize Number of 90kg Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Moisture_Content__c</fullName>
        <label>Pigeon Peas Moisture Content</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Number_of_90kg_Bags__c</fullName>
        <label>Pigeon Peas Number of 90kg Bags</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Farmer_Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Sale Farmer Unique ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Ewarehouse Sale Farmer Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ewarehouse_Farmer__c</columns>
        <columns>Ewarehouse_Sale__c</columns>
        <columns>NAME</columns>
        <columns>Maize_Number_of_90kg_Bags__c</columns>
        <columns>Beans_Number_of_90kg_Bags__c</columns>
        <columns>Cow_Peas_Number_of_90kg_Bags__c</columns>
        <columns>Dolichos_Number_of_90kg_Bags__c</columns>
        <columns>Green_Grams_Number_of_90kg_Bags__c</columns>
        <columns>Pigeon_Peas_Number_of_90kg_Bags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Ewarehouse Sale Farmer Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ewarehouse Sale Farmer Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>